Change hamiltonians to conform to qubovert

--- a/configproblem/MinCostSAT_QAOA.ipynb
+++ b/configproblem/MinCostSAT_QAOA.ipynb
@@ -190,39 +190,44 @@
    "outputs": [],
    "source": [
     "# Cost Hamiltonian\n",
-    "def problem_circuit(hamiltonian: [], nqubits: int) -> QuantumCircuit:\n",
+    "def problem_circuit(hamiltonian, nqubits: int) -> QuantumCircuit:\n",
     "    gamma = Parameter(\"$\\\\gamma$\")\n",
     "    qc_p = QuantumCircuit(nqubits)\n",
     "    \n",
-    "    for term in hamiltonian:\n",
-    "        factor, q1, q2 = term\n",
+    "    for key, factor in hamiltonian.items():\n",
+    "        acting_qubits = len(key)\n",
     "        \n",
-    "        # case single qubit term\n",
-    "        if q2 is None:\n",
-    "            if q1 is not None:\n",
-    "                qc_p.rz(2 * factor * gamma, q1-1)\n",
-    "            \n",
-    "        # case two qubit term\n",
+    "        if acting_qubits == 0:\n",
+    "            pass # identity case\n",
+    "        elif acting_qubits == 1:\n",
+    "            # single qubit term\n",
+    "            q1 = key[0]\n",
+    "            qc_p.rz(2 * factor * gamma, q1)\n",
+    "        elif acting_qubits ==2:\n",
+    "            # quadratic qubit term\n",
+    "            q1 = key[0]\n",
+    "            q2 = key[1]\n",
+    "            qc_p.rzz(2 * factor * gamma, q1, q2)\n",
     "        else:\n",
-    "            qc_p.rzz(2 * factor * gamma, q1-1, q2-1)\n",
-    "        \n",
-    "        # barrier to delimit terms\n",
-    "        #qc_p.barrier()\n",
-    "    \n",
+    "            # non quadratic, error\n",
+    "            RuntimeError(f\"Non quadratic term in hamiltonian: {key, factor}\")\n",
+    "            \n",
     "    return qc_p, gamma\n",
     "    \n",
-    "# Hamiltonians may be described as a list of tuples containing a factor and up to two qubits \n",
-    "# hamiltonian = [(factor, q1, q2)]\n",
-    "sat_hamiltonian = [\n",
-    "    (1, None, None),\n",
-    "    (0.25, 1, None),\n",
-    "    (0.25, 2, None),\n",
-    "    (-0.25, 5, None),\n",
-    "    (0.25, 6, None),\n",
-    "    (0.25, 1, 2),\n",
-    "    (0.5, 3, 4),\n",
-    "    (-0.25, 5, 6),\n",
-    "]\n",
+    "# Hamiltonians may be described as a dict of tuples describing acting qubits and a value\n",
+    "# hamiltonian = {(q1?, q2?, ...) : factor}\n",
+    "sat_hamiltonian = {\n",
+    "    () : 1,\n",
+    "    (0,): 0.25,\n",
+    "    (1,): 0.25,\n",
+    "    (4,): -0.25,\n",
+    "    (5,): 0.25,\n",
+    "    (0, 1): 0.25,\n",
+    "    (2, 3): 0.5,\n",
+    "    (4, 5): -0.25\n",
+    "}\n",
+    "\n",
+    "\n",
     "example_qc_problem, _ = problem_circuit(sat_hamiltonian, 6)\n",
     "example_qc_problem.draw(output=\"mpl\")"
    ]
@@ -307,17 +312,25 @@
     "def compute_hamiltonian_energy(hamiltonian, counts):\n",
     "    def compute_config_energy(config: str):\n",
     "        energy = 0\n",
-    "        for term in hamiltonian:\n",
-    "            factor, q1, q2 = term\n",
+    "        \n",
+    "        for key, factor in hamiltonian.items():\n",
+    "            acting_qubits = len(key)\n",
     "\n",
-    "            if q1 is None:\n",
+    "            if acting_qubits == 0:\n",
+    "                # identity case\n",
     "                energy += factor\n",
-    "                continue\n",
-    "\n",
-    "            if q2 is None:\n",
-    "                energy += factor * config[q1-1]\n",
+    "            elif acting_qubits == 1:\n",
+    "                # single qubit term\n",
+    "                q1 = key[0]\n",
+    "                energy += factor * config[q1]\n",
+    "            elif acting_qubits ==2:\n",
+    "                # quadratic qubit term\n",
+    "                q1 = key[0]\n",
+    "                q2 = key[1]\n",
+    "                energy += factor * config[q1] * config[q2]\n",
     "            else:\n",
-    "                energy += factor * config[q1-1] * config[q2-1]\n",
+    "                # non quadratic, error\n",
+    "                RuntimeError(f\"Non quadratic term in hamiltonian: {key, factor}\")\n",
     "\n",
     "        return energy\n",
     "    \n",
@@ -361,18 +374,16 @@
     "\n",
     "# inputs\n",
     "# hamiltonian = [(factor, q1, q2)]\n",
-    "feetcost_hamiltonian = [\n",
-    "    (1000082.5, None, None),\n",
-    "    (249985.0, 1, None),\n",
-    "    (250000.0, 1, 2),\n",
-    "    (249990.0, 2, None),\n",
-    "    (-12.5, 3, None),\n",
-    "    (500000.0, 3, 4),\n",
-    "    (-25, 4, None),\n",
-    "    (-250015.0, 5, None),\n",
-    "    (-250000.0, 5, 6),\n",
-    "    (249995.0, 6, None)\n",
-    "]\n",
+    "feetcost_hamiltonian = {(): 1000082.5,\n",
+    " (0,): 249985.0,\n",
+    " (0, 1): 250000.0,\n",
+    " (1,): 249990.0,\n",
+    " (2,): -12.5,\n",
+    " (2, 3): 500000.0,\n",
+    " (3,): -25.0,\n",
+    " (4,): -250015.0,\n",
+    " (4, 5): -250000.0,\n",
+    " (5,): 249995.0}\n",
     "\n",
     "# warmstart array\n",
     "warmstart_statevector = \\\n",
@@ -392,16 +403,23 @@
     "\n",
     "layers = 1 # more layers = higher approximation rate but more quantum errors when running on real qpu\n",
     "nfeatures = 6\n",
+    "shots = 128\n",
+    "use_warmstart = True\n",
     "\n",
-    "\n",
-    "expectation = get_expectation(feetcost_hamiltonian, nfeatures, layers, 128)\n",
-    "res = minimize(expectation, [1, 1], method='BFGS', tol=1e-12)\n",
-    "# res = basinhopping(expectation, [1, 1])\n",
-    "\n",
+    "if use_warmstart:\n",
+    "    expectation = get_expectation(feetcost_hamiltonian, nfeatures, layers, shots, warmstart_statevector)\n",
+    "else:\n",
+    "    expectation = get_expectation(feetcost_hamiltonian, nfeatures, layers, shots)\n",
+    "    \n",
+    "# run qaoa\n",
+    "res = minimize(expectation, [1, 1], method='BFGS', tol=1e-12)      \n",
     "print(res)\n",
     "\n",
     "# output \n",
-    "histogram_figure = quantum(feetcost_hamiltonian, nfeatures, layers, res.x[0], res.x[1])"
+    "if use_warmstart:\n",
+    "    histogram_figure = quantum(feetcost_hamiltonian, nfeatures, layers, res.x[0], res.x[1], shots, warmstart_statevector)\n",
+    "else:\n",
+    "    histogram_figure = quantum(feetcost_hamiltonian, nfeatures, layers, res.x[0], res.x[1], shots)"
    ]
   },
   {
@@ -472,7 +490,7 @@
     "x1, x2, x3, x4, x5, x6 = boolean_var('x1'), boolean_var('x2'), boolean_var('x3'), boolean_var('x4'), boolean_var('x5'), boolean_var('x6')\n",
     "\n",
     "# SAT Penalty\n",
-    "alpha_sat = 1e3\n",
+    "alpha_sat = 1e6\n",
     "\n",
     "# SAT QUBO\n",
     "sat_model = alpha_sat * (2 - x1 - x2 - x3 - x4 + x5 + x1 * x2 + 2 * x3 * x4 - x5 * x6)\n",
