Complete feature model to problem transformation

--- a/configproblem/SolvingSATWithGrover.ipynb
+++ b/configproblem/SolvingSATWithGrover.ipynb
@@ -653,17 +653,18 @@
     "    current_folder = globals()['_dh'][0]\n",
     "    some_model_path = os.path.join(current_folder, rel_path)\n",
     "    reader = Extended_Modelreader()\n",
-    "    feature_model = reader.readModel(some_model_path)\n",
+    "    feature_model, constraints = reader.readModel(some_model_path)\n",
     "    \n",
     "    # transform to cnf and then to problem\n",
-    "    feature_cnf = feature_model.build_cnf()\n",
+    "    feature_cnf = feature_model.build_cnf(constraints)\n",
+    "    print(feature_cnf)\n",
     "    feature_problem = feature_cnf.to_problem()\n",
     "    \n",
     "    # create grover circuit\n",
     "    problem_qc, problem_oracle = create_ksat_grover(feature_problem, k) # Create the circuit\n",
     "    return problem_qc\n",
     "    \n",
-    "model = \"../benchmarks/sandwich.xml\"\n",
+    "model = \"../benchmarks/car.xml\"\n",
     "model_circuit = create_grover_for_model(model)\n",
     "model_circuit.draw(output=\"mpl\")"
    ]
@@ -677,7 +678,7 @@
    "source": [
     "from qiskit.providers.aer import StatevectorSimulator, QasmSimulator\n",
     "\n",
-    "def simulate_circuit(circuit, backend=StatevectorSimulator(), shots=100):\n",
+    "def simulate_circuit(circuit, backend=StatevectorSimulator(), shots=10):\n",
     "    # transpile and collect meta data\n",
     "    transpiled_grover_circuit = transpile(circuit, backend)\n",
     "    print(f\"Circuit depth: {transpiled_grover_circuit.depth()} width: {transpiled_grover_circuit.width()}\")\n",
