Hotfix grover circuit analysis

--- a/configproblem/SolvingSATWithGrover.ipynb
+++ b/configproblem/SolvingSATWithGrover.ipynb
@@ -666,7 +666,7 @@
     "    \n",
     "model = \"../benchmarks/car.xml\"\n",
     "model_circuit = create_grover_for_model(model)\n",
-    "model_circuit.draw(output=\"mpl\")"
+    "# model_circuit.draw(output=\"mpl\")"
    ]
   },
   {
@@ -678,17 +678,26 @@
    "source": [
     "from qiskit.providers.aer import StatevectorSimulator, QasmSimulator\n",
     "\n",
-    "def simulate_circuit(circuit, backend=StatevectorSimulator(), shots=10):\n",
+    "def simulate_circuit(circuit, backend=StatevectorSimulator(), shots=100, simulate=False):\n",
     "    # transpile and collect meta data\n",
     "    transpiled_grover_circuit = transpile(circuit, backend)\n",
-    "    print(f\"Circuit depth: {transpiled_grover_circuit.depth()} width: {transpiled_grover_circuit.width()}\")\n",
+    "    print(f\"Circuit depth: {transpiled_grover_circuit.depth()}gates - width: {transpiled_grover_circuit.num_qubits}qubits\")\n",
     "    \n",
     "    # try to run/simulate\n",
-    "    results = backend.run(transpiled_grover_circuit, shots=shots).result()\n",
-    "    counts = results.get_counts()\n",
-    "    return counts\n",
+    "    if simulate:\n",
+    "        results = backend.run(transpiled_grover_circuit, shots=shots).result()\n",
+    "        counts = results.get_counts()\n",
+    "        return counts\n",
     "\n",
-    "measurements = simulate_circuit(model_circuit)\n",
+    "# gather backend metrics\n",
+    "# from qiskit import IBMQ, assemble, transpile\n",
+    "# provider = IBMQ.load_account()\n",
+    "\n",
+    "# print(provider.backends())\n",
+    "# simulate_circuit(model_circuit, provider.backend.ibmq_geneva)    \n",
+    "\n",
+    "# actual simulation\n",
+    "measurements = simulate_circuit(model_circuit, shots=1000, simulate=False)\n",
     "plot_histogram(measurements, figsize=(40, 10))"
    ]
   }
