SQUASH LATER: intermediary test commit
Used to debug the state of qiskit transpilation
works in jupyter but not natively

--- a/configproblem/SolvingSATWithGrover.ipynb
+++ b/configproblem/SolvingSATWithGrover.ipynb
@@ -273,8 +273,16 @@
     "    # Append the phase transformation \n",
     "    phase_qc = phase_qc.compose(qc_conv.inverse(), qubits=[target_idx])\n",
     "\n",
-    "    return phase_qc\n",
-    "\n",
+    "    return phase_qc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e0dba889",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "phase_problem_circuit = oracle_converter(problem_circuit, len(inp_reg))\n",
     "phase_problem_circuit.draw(output=\"mpl\")"
    ]
@@ -295,6 +303,9 @@
    "outputs": [],
    "source": [
     "def print_matrix(circuit):\n",
+    "    \"\"\"\n",
+    "        Prints the matrix of a given quantum circuit (oracle) and analyzes it regarding positive and negative values\n",
+    "    \"\"\"\n",
     "    ppod = Operator(circuit).data\n",
     "    print(\"Values in Operator\", set(ppod.flatten()))\n",
     "    print(f\"Oracle Shape: {ppod.shape}\", f\"Elements;; nonzero:{np.count_nonzero(ppod)}, 1: {np.count_nonzero(ppod.real > 0.99)}, -1: {np.count_nonzero(ppod.real < -0.99)}\")\n",
@@ -312,6 +323,14 @@
    "outputs": [],
    "source": [
     "def print_diagonal_analysis(circuit, measurements=None):\n",
+    "    \"\"\"\n",
+    "        Prints analysis data about a given quantum circuit (oracle).\n",
+    "        This method was used to determine whether one could trivially derive valid states from a given oracle.\n",
+    "        \n",
+    "        Keyword Arguments\"\n",
+    "        circuit -- qiskit quantum circuit representing a grover oracle\n",
+    "        measurements -- dictionary of states and measurement counts as derived by qiskits counts() method after simulation\n",
+    "    \"\"\"\n",
     "    od = Operator(circuit).data\n",
     "    diagonal_values = [round(od[x][x].real) for x in range(len(od[0]))]\n",
     "    bspace_padding = math.ceil(math.log(len(diagonal_values), 2))\n",
@@ -645,26 +664,36 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from util.hamiltonian_generator import Extended_Modelreader\n",
+    "from qiskit import Aer, transpile\n",
+    "from util.xml_reader import Extended_Modelreader\n",
+    "from util.dimacs_reader import DimacsReader\n",
+    "from util.cnf import CNF\n",
     "import os \n",
     "\n",
     "def create_grover_for_model(rel_path, k=1):\n",
     "    # load given model\n",
     "    current_folder = globals()['_dh'][0]\n",
     "    some_model_path = os.path.join(current_folder, rel_path)\n",
-    "    reader = Extended_Modelreader()\n",
-    "    feature_model, constraints = reader.readModel(some_model_path)\n",
     "    \n",
-    "    # transform to cnf and then to problem\n",
-    "    feature_cnf = feature_model.build_cnf(constraints)\n",
-    "    print(feature_cnf)\n",
-    "    feature_problem = feature_cnf.to_problem()\n",
+    "    if rel_path.split('.')[-1] == \"xml\":\n",
+    "        reader = Extended_Modelreader()\n",
+    "        feature_model, constraints = reader.readModel(some_model_path)\n",
+    "        # transform to cnf and then to problem\n",
+    "        feature_cnf = feature_model.build_cnf(constraints)\n",
+    "        print(feature_cnf)\n",
+    "        problem = feature_cnf.to_problem()\n",
+    "    \n",
+    "    elif rel_path.split('.')[-1] in [\"dimacs\", \"cnf\"]:\n",
+    "        rd = DimacsReader()\n",
+    "        rd.fromFile(some_model_path)\n",
+    "        problem = CNF().from_dimacs(rd).to_problem()\n",
     "    \n",
     "    # create grover circuit\n",
-    "    problem_qc, problem_oracle = create_ksat_grover(feature_problem, k) # Create the circuit\n",
+    "    problem_qc, problem_oracle = create_ksat_grover(problem, k) # Create the circuit\n",
     "    return problem_qc\n",
     "    \n",
     "model = \"../benchmarks/car.xml\"\n",
+    "# model = \"../benchmarks/problem_f.cnf\"\n",
     "model_circuit = create_grover_for_model(model)\n",
     "# model_circuit.draw(output=\"mpl\")"
    ]
@@ -678,16 +707,21 @@
    "source": [
     "from qiskit.providers.aer import StatevectorSimulator, QasmSimulator\n",
     "\n",
-    "def simulate_circuit(circuit, backend=StatevectorSimulator(), shots=100, simulate=False):\n",
+    "    \n",
+    "def collect_circuit_info(circuit, backend=\"aer_simulator\", shots=100, simulate=False):\n",
     "    # transpile and collect meta data\n",
-    "    transpiled_grover_circuit = transpile(circuit, backend)\n",
-    "    print(f\"Circuit depth: {transpiled_grover_circuit.depth()}gates - width: {transpiled_grover_circuit.num_qubits}qubits\")\n",
+    "    info = {}\n",
+    "    simulator = Aer.get_backend(backend)\n",
+    "    transpiled_grover_circuit = transpile(circuit, backend=simulator)\n",
+    "    info['depth'] = transpiled_grover_circuit.depth()\n",
+    "    info['width'] = transpiled_grover_circuit.num_qubits\n",
     "    \n",
     "    # try to run/simulate\n",
     "    if simulate:\n",
-    "        results = backend.run(transpiled_grover_circuit, shots=shots).result()\n",
-    "        counts = results.get_counts()\n",
-    "        return counts\n",
+    "        results = simulator.run(transpiled_grover_circuit, shots=shots).result()\n",
+    "        info['counts'] = results.get_counts()\n",
+    "    \n",
+    "    return info\n",
     "\n",
     "# gather backend metrics\n",
     "# from qiskit import IBMQ, assemble, transpile\n",
@@ -697,8 +731,8 @@
     "# simulate_circuit(model_circuit, provider.backend.ibmq_geneva)    \n",
     "\n",
     "# actual simulation\n",
-    "measurements = simulate_circuit(model_circuit, shots=1000, simulate=False)\n",
-    "plot_histogram(measurements, figsize=(40, 10))"
+    "info = simulate_circuit(model_circuit, shots=1000, simulate=True)\n",
+    "plot_histogram(info['counts'], figsize=(40, 10))"
    ]
   }
  ],
@@ -722,7 +756,7 @@
   },
   "vscode": {
    "interpreter": {
-    "hash": "d3514f4bb63f5ef06960f249eaf871d4155ba26850e795a4551f45f075b9fcda"
+    "hash": "faad9e4f9b7fb42165439c94406641ba61da81ba54e9c6de9b6b2c791707c6b0"
    }
   }
  },
