Start making the QAOA notebook more readable

--- a/configproblem/MinCostSAT_QAOA.ipynb
+++ b/configproblem/MinCostSAT_QAOA.ipynb
@@ -6,7 +6,9 @@
    "metadata": {},
    "source": [
     "# Solving a mincost SAT problem using QAOA\n",
-    "TODO: Fix Hamiltonian\n",
+    "**TODO: Fix Hamiltonian???**\n",
+    "\n",
+    "**TODO: move this**\n",
     "\n",
     "We want to solve our configuration example from the Poster.\n",
     "\n",
@@ -131,6 +133,48 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "7d64fd65",
+   "metadata": {},
+   "source": [
+    "## Quantum Approximation Optimization Algorithm\n",
+    "Approximates the solution of an combinatorial optimization problem consisting of:\n",
+    "- $n$ binary variables\n",
+    "- $m$ clauses\n",
+    "- objective function $C(z)$\n",
+    "\n",
+    "The domain of the problem is unconstraind, thus the algorithms goal is to find an (almost) optimal bistring $z=z_1...z_n$\n",
+    "\n",
+    "It refines VQA and uses the Alternating Operator Ansatz.\n",
+    "The algorithm constists of a classical and quantum part.\n",
+    "\n",
+    "On a quantum computer a circuit is constructed which is parameterized by $\\gamma$ and $\\beta$.\n",
+    "Intially the unform superposition state $H^{\\otimes n}$ is prepared.\n",
+    "\n",
+    "Two operators $U(C,\\gamma)$ and $U(B,\\beta)$ are constructed.\n",
+    "The phase-seperating operator $U(C,\\gamma)$ encodes $C$  and applies a phase shift $e^{-i\\gamma}$ on every computational basis state for every clause that is fulfilled.\n",
+    "The mixing operator $U(B, \\beta)$ changes the amplitude of solutions useing rotation $R_x$.\n",
+    "\n",
+    "Both $U(C,\\gamma)$  and $U(B,\\beta)$ are then applied $p$ times according to the hyper-paramter $p \\in \\mathbf{N}$.\n",
+    "Finally measurements gates are added.\n",
+    "\n",
+    "The circuit has a shallow cicuit depth of at most $mp+m$.\n",
+    "\n",
+    "On a classical computer the cost of $C(z)$ for the current evaluation is evaluated.\n",
+    "Either the process is terminated if the termination condition is met ($C(z)$ is sufficiently low), or the paramters $\\gamma$ and $\\beta$ are optimized classically.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a37455bf",
+   "metadata": {},
+   "source": [
+    "## Quantum circuit\n",
+    "We start by defining the parameteriezed circuit."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "cecf5c50",
@@ -147,6 +191,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "37fdd0d7",
+   "metadata": {},
+   "source": [
+    "### Initialization\n",
+    "Uniform superposition by applying Hadamard gates $H$ on every qubit."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "183305a6",
@@ -160,7 +213,16 @@
     "        qc_0.h(i)\n",
     "    return qc_0\n",
     "\n",
-    "superposition_circuit(4).draw(output=\"mpl\")"
+    "superposition_circuit(2).draw(output=\"mpl\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9f2eaf2f",
+   "metadata": {},
+   "source": [
+    "### Mixing operator\n",
+    "The mixing operator $U(B, \\beta)$ applies a rotation around $X$ of $2*\\beta$ on every qubit using $R_x$ gates."
    ]
   },
   {
@@ -178,8 +240,49 @@
     "        qc_mix.rx(2 * beta, i)\n",
     "    return qc_mix, beta\n",
     "    \n",
-    "example_qc_mixer, _ = mixer_circuit(4)\n",
+    "example_qc_mixer, _ = mixer_circuit(2)\n",
     "example_qc_mixer.draw(output=\"mpl\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "82ca4d5f",
+   "metadata": {},
+   "source": [
+    "### Phase-seperating operator\n",
+    "The phase-seperating operator $U(C,\\gamma)$ encodes $C$ and can be derived from a cost Hamiltonian $H_{Ctot}$ in Ising-form. \n",
+    "We can describe $H_{Ctot}$ in a form where for $m$ clauses operating on one or two qubits (because the domain is unconstrained) the values of $C$ are encoded.\n",
+    "We later describe how such a Hamilonian can be constructed for our concrete problem class."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "42ea509a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Hamiltonians may be described as a dict of tuples describing acting qubits and a value for each clause\n",
+    "# hamiltonian = {(q1?, q2?, ...) : factor}\n",
+    "sat_hamiltonian = {\n",
+    "    () : 1,\n",
+    "    (0,): 0.25,\n",
+    "    (1,): 0.25,\n",
+    "    (4,): -0.25,\n",
+    "    (5,): 0.25,\n",
+    "    (0, 1): 0.25,\n",
+    "    (2, 3): 0.5,\n",
+    "    (4, 5): -0.25\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ba8b0ab6",
+   "metadata": {},
+   "source": [
+    "Clauses on one qubits are then translated into $R_z$ rotations and clauses on two qubits are translated into the symmetric $R_{zz}$ gate.\n",
+    "**TODO: explain / understand $R_{zz}$**"
    ]
   },
   {
@@ -213,23 +316,17 @@
     "            RuntimeError(f\"Non quadratic term in hamiltonian: {key, factor}\")\n",
     "            \n",
     "    return qc_p, gamma\n",
-    "    \n",
-    "# Hamiltonians may be described as a dict of tuples describing acting qubits and a value\n",
-    "# hamiltonian = {(q1?, q2?, ...) : factor}\n",
-    "sat_hamiltonian = {\n",
-    "    () : 1,\n",
-    "    (0,): 0.25,\n",
-    "    (1,): 0.25,\n",
-    "    (4,): -0.25,\n",
-    "    (5,): 0.25,\n",
-    "    (0, 1): 0.25,\n",
-    "    (2, 3): 0.5,\n",
-    "    (4, 5): -0.25\n",
-    "}\n",
-    "\n",
     "\n",
     "example_qc_problem, _ = problem_circuit(sat_hamiltonian, 6)\n",
     "example_qc_problem.draw(output=\"mpl\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d0fef60f",
+   "metadata": {},
+   "source": [
+    "**TODO: continue explanation**"
    ]
   },
   {
@@ -293,10 +390,11 @@
     "    results = qasm_sim.run(transpiled_qaoa, shots=shots).result()\n",
     "    counts = results.get_counts()\n",
     "\n",
-    "    return plot_histogram(counts, figsize=(40, 10))\n",
-    "    plt.show()\n",
+    "#     return plot_histogram(counts, figsize=(40, 10))\n",
+    "    return qc.draw(output=\"mpl\")\n",
     "        \n",
-    "quantum(sat_hamiltonian, 6, 1, 1, 1)"
+    "qc = quantum(sat_hamiltonian, 6, 1, 1, 1)\n",
+    "qc"
    ]
   },
   {
@@ -507,6 +605,14 @@
     "\n",
     "solve_bruteforce(combine_model)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "24130b95",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -525,7 +631,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.12"
   },
   "vscode": {
    "interpreter": {
