--- a/configproblem/MinCostSAT_QAOA.ipynb
+++ b/configproblem/MinCostSAT_QAOA.ipynb
@@ -62,7 +62,11 @@
     "The circuit has a shallow cicuit depth of at most $mp+m$.\n",
     "\n",
     "On a classical computer the cost of $C(z)$ for the current evaluation is evaluated.\n",
-    "Either the process is terminated if the termination condition is met ($C(z)$ is sufficiently low), or the paramters $\\gamma$ and $\\beta$ are optimized classically.\n"
+    "Either the process is terminated if the termination condition is met ($C(z)$ is sufficiently low), or the paramters $\\gamma$ and $\\beta$ are optimized classically.\n",
+    "\n",
+    "$-2\\pi\\lt\\gamma\\lt2\\pi$ and $-\\pi\\lt\\beta\\lt\\pi$\n",
+    "\n",
+    "**TODO: check factor 2 in circuit**\n"
    ]
   },
   {
@@ -87,7 +91,9 @@
     "from qiskit.visualization import plot_histogram\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "from pprint import pprint"
+    "from pprint import pprint\n",
+    "\n",
+    "import math"
    ]
   },
   {
@@ -117,7 +123,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d649f8fa",
+   "id": "8ae010df",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,7 +158,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c90c877a",
+   "id": "72fe757f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -215,6 +221,7 @@
     "def problem_circuit(hamiltonian, nqubits: int) -> QuantumCircuit:\n",
     "    gamma = Parameter(\"$\\\\gamma$\")\n",
     "    qc_p = QuantumCircuit(nqubits)\n",
+    "    normalization = math.pi/max(hamiltonian.values())\n",
     "    \n",
     "    for key, factor in hamiltonian.items():\n",
     "        acting_qubits = len(key)\n",
@@ -224,12 +231,12 @@
     "        elif acting_qubits == 1:\n",
     "            # single qubit term\n",
     "            q1 = key[0]\n",
-    "            qc_p.rz(2 * factor * gamma, q1)\n",
+    "            qc_p.rz(2 * normalization * factor * gamma, q1)\n",
     "        elif acting_qubits ==2:\n",
     "            # quadratic qubit term\n",
     "            q1 = key[0]\n",
     "            q2 = key[1]\n",
-    "            qc_p.rzz(2 * factor * gamma, q1, q2)\n",
+    "            qc_p.rzz(2 * normalization * factor * gamma, q1, q2)\n",
     "        else:\n",
     "            # non quadratic, error\n",
     "            RuntimeError(f\"Non quadratic term in hamiltonian: {key, factor}\")\n",
@@ -240,7 +247,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d27344d3",
+   "id": "a74bdeb0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -296,7 +303,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ffc835df",
+   "id": "a1d763bf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -306,7 +313,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "065556b5",
+   "id": "ab25a6bc",
    "metadata": {},
    "source": [
     "### Quantum routine\n",
@@ -342,7 +349,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a122e334",
+   "id": "95848f67",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -353,7 +360,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "db93aa01",
+   "id": "3c9da5cc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -362,7 +369,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6db5b34f",
+   "id": "1b5f1f34",
    "metadata": {},
    "source": [
     "## Creating a problem specific Hamiltonian\n",
@@ -472,7 +479,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7b31907a",
+   "id": "691550cc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -488,7 +495,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d15861ec",
+   "id": "c1b0d2b7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -502,7 +509,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5a09ca48",
+   "id": "a1aae270",
    "metadata": {},
    "source": [
     "We can also define the SAT ($H_C$) and cost ($H_{Ck}$) Hamiltonians separatly and combine them afterwards."
@@ -511,7 +518,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c3b53638",
+   "id": "188709a3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -522,7 +529,7 @@
     "x1, x2, x3, x4, x5, x6 = boolean_var('x1'), boolean_var('x2'), boolean_var('x3'), boolean_var('x4'), boolean_var('x5'), boolean_var('x6')\n",
     "\n",
     "# SAT Penalty\n",
-    "alpha_sat = 1000 # 1e6\n",
+    "alpha_sat = 100 # 1e6\n",
     "\n",
     "# SAT QUBO\n",
     "sat_model = alpha_sat * (2 - x1 - x2 - x3 - x4 + x5 + x1 * x2 + 2 * x3 * x4 - x5 * x6)\n",
@@ -531,18 +538,19 @@
     "cost_model = 30*x1 + 20*x2 + 25*x3 + 50*x4 + 30*x5 + 10*x6\n",
     "\n",
     "# Combine models\n",
-    "combine_model = sat_model +  cost_model\n",
+    "combined_model = sat_model +  cost_model\n",
     "print(\"QUBO Combined Model:\")\n",
-    "pprint(combine_model)\n",
+    "pprint(combined_model)\n",
     "print(\"Ising Combined Model: \")\n",
-    "pprint(combine_model.to_quso())\n",
+    "combined_hamiltonian = combined_model.to_quso()\n",
+    "print(combined_hamiltonian)\n",
     "\n",
-    "solve_bruteforce(combine_model)"
+    "solve_bruteforce(combined_model)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "b94cf144",
+   "id": "06d4c6b3",
    "metadata": {},
    "source": [
     "## Classical Routine\n",
@@ -605,7 +613,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0d9c75f3",
+   "id": "587d1cda",
    "metadata": {},
    "source": [
     "We can then define a function that given a beta and gamma as input creates a quantum circuit, executes it multiple times and returns the energy.\n",
@@ -616,7 +624,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8d685bcd",
+   "id": "c7e5a02a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -641,35 +649,27 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b4b13585",
+   "id": "68097306",
    "metadata": {},
    "source": [
     "## Applying QAOA\n",
-    "Finally we can run the whole algorithm for a specific problem Hamiltonian."
+    "Finally we can run the whole algorithm for a specific problem Hamiltonian.\n",
+    "\n",
+    "**TODO: try SAT without optimization loop**"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "802d16f4",
+   "id": "216096d9",
    "metadata": {},
    "outputs": [],
    "source": [
     "# QAOA Using Optimizer\n",
     "from scipy.optimize import minimize, basinhopping\n",
     "\n",
-    "# inputs\n",
-    "# hamiltonian = [(factor, q1, q2)]\n",
-    "feetcost_hamiltonian = {(): 1000082.5,\n",
-    " (0,): 249985.0,\n",
-    " (0, 1): 250000.0,\n",
-    " (1,): 249990.0,\n",
-    " (2,): -12.5,\n",
-    " (2, 3): 500000.0,\n",
-    " (3,): -25.0,\n",
-    " (4,): -250015.0,\n",
-    " (4, 5): -250000.0,\n",
-    " (5,): 249995.0}\n",
+    "# hamiltonian = combined_hamiltonian \n",
+    "hamiltonian = sat_model.to_quso()\n",
     "\n",
     "# warmstart array\n",
     "warmstart_statevector = \\\n",
@@ -687,30 +687,31 @@
     "       0.26267851, 0.        , 0.232379  , 0.20248457, 0.20736441,\n",
     "       0.04472136, 0.        , 0.        , 0.        ]\n",
     "\n",
-    "layers = 1 # more layers = higher approximation rate but more quantum errors when running on real qpu\n",
+    "layers = 60 # more layers = higher approximation rate but more quantum errors when running on real qpu\n",
     "nfeatures = 6\n",
     "shots = 128\n",
     "use_warmstart = False\n",
     "\n",
     "if use_warmstart:\n",
-    "    expectation = get_expectation(feetcost_hamiltonian, nfeatures, layers, shots, warmstart_statevector)\n",
+    "    expectation = get_expectation(hamiltonian, nfeatures, layers, shots, warmstart_statevector)\n",
     "else:\n",
-    "    expectation = get_expectation(feetcost_hamiltonian, nfeatures, layers, shots)\n",
+    "    expectation = get_expectation(hamiltonian, nfeatures, layers, shots)\n",
     "    \n",
     "# run qaoa\n",
-    "res = minimize(expectation, [1, 1], method='BFGS', tol=1e-12)      \n",
+    "res = minimize(expectation, [0.01, -0.01], method='BFGS', tol=1e-12)      \n",
+    "# TODO: qiskit optimizer -> callback\n",
     "\n",
     "# output \n",
     "if use_warmstart:\n",
-    "    counts, qc = quantum(feetcost_hamiltonian, nfeatures, layers, res.x[0], res.x[1], shots, warmstart_statevector)\n",
+    "    counts, qc = quantum(hamiltonian, nfeatures, layers, res.x[0], res.x[1], shots, warmstart_statevector)\n",
     "else:\n",
-    "    counts, qc = quantum(feetcost_hamiltonian, nfeatures, layers, res.x[0], res.x[1], shots)"
+    "    counts, qc = quantum(hamiltonian, nfeatures, layers, res.x[0], res.x[1], shots)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "37815e68",
+   "id": "51226974",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -720,11 +721,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9476b012",
+   "id": "0301ed4c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "qc.draw(output=\"mpl\")"
+    "# qc.draw(output=\"mpl\")"
    ]
   },
   {
