Add run QAOA without optimizer

--- a/configproblem/MinCostSAT_QAOA.ipynb
+++ b/configproblem/MinCostSAT_QAOA.ipynb
@@ -653,9 +653,7 @@
    "metadata": {},
    "source": [
     "## Applying QAOA\n",
-    "Finally we can run the whole algorithm for a specific problem Hamiltonian.\n",
-    "\n",
-    "**TODO: try SAT without optimization loop**"
+    "Finally we can run the whole algorithm for a specific problem Hamiltonian."
    ]
   },
   {
@@ -668,8 +666,8 @@
     "# QAOA Using Optimizer\n",
     "from scipy.optimize import minimize, basinhopping\n",
     "\n",
-    "# hamiltonian = combined_hamiltonian \n",
-    "hamiltonian = sat_model.to_quso()\n",
+    "# hamiltonian = combined_hamiltonian # min-cost SAT\n",
+    "hamiltonian = sat_model.to_quso()   # just SAT\n",
     "\n",
     "# warmstart array\n",
     "warmstart_statevector = \\\n",
@@ -690,32 +688,24 @@
     "layers = 60 # more layers = higher approximation rate but more quantum errors when running on real qpu\n",
     "nfeatures = 6\n",
     "shots = 128\n",
+    "theta = {\"beta\": 0.01, \"gamma\": -0.01} # start values for optimization\n",
     "use_warmstart = False\n",
+    "use_optimizer = True\n",
     "\n",
-    "if use_warmstart:\n",
-    "    expectation = get_expectation(hamiltonian, nfeatures, layers, shots, warmstart_statevector)\n",
-    "else:\n",
-    "    expectation = get_expectation(hamiltonian, nfeatures, layers, shots)\n",
-    "    \n",
-    "# run qaoa\n",
-    "res = minimize(expectation, [0.01, -0.01], method='BFGS', tol=1e-12)      \n",
-    "# TODO: qiskit optimizer -> callback\n",
+    "if not use_warmstart:\n",
+    "    warmstart_statevector = None\n",
     "\n",
-    "# output \n",
-    "if use_warmstart:\n",
-    "    counts, qc = quantum(hamiltonian, nfeatures, layers, res.x[0], res.x[1], shots, warmstart_statevector)\n",
-    "else:\n",
-    "    counts, qc = quantum(hamiltonian, nfeatures, layers, res.x[0], res.x[1], shots)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "51226974",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(res)"
+    "# define expectation function for optimizers\n",
+    "expectation = get_expectation(hamiltonian, nfeatures, layers, shots, warmstart_statevector)\n",
+    "\n",
+    "# optimize beta and gamma\n",
+    "if use_optimizer:\n",
+    "    res = minimize(expectation, [theta[\"beta\"], theta[\"gamma\"]], method='BFGS', tol=1e-12)\n",
+    "    print(res)\n",
+    "    theta = {\"beta\": res.x[0], \"gamma\": res.x[1]}    \n",
+    "\n",
+    "# run qaoa circuit with parameters in theta\n",
+    "counts, qc = quantum(hamiltonian, nfeatures, layers, theta[\"beta\"], theta[\"gamma\"], shots, warmstart_statevector)"
    ]
   },
   {
@@ -769,7 +759,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.9.15"
   },
   "vscode": {
    "interpreter": {
