--- a/configproblem/MinCostSAT_QAOA.ipynb
+++ b/configproblem/MinCostSAT_QAOA.ipynb
@@ -666,8 +666,8 @@
     "# QAOA Using Optimizer\n",
     "from scipy.optimize import minimize, basinhopping\n",
     "\n",
-    "# hamiltonian = combined_hamiltonian # min-cost SAT\n",
-    "hamiltonian = sat_model.to_quso()   # just SAT\n",
+    "hamiltonian = combined_hamiltonian # min-cost SAT\n",
+    "# hamiltonian = sat_model.to_quso()   # just SAT\n",
     "\n",
     "# warmstart array\n",
     "warmstart_statevector = \\\n",
@@ -687,7 +687,7 @@
     "\n",
     "layers = 60 # more layers = higher approximation rate but more quantum errors when running on real qpu\n",
     "nfeatures = 6\n",
-    "shots = 128\n",
+    "shots = 256\n",
     "theta = {\"beta\": 0.01, \"gamma\": -0.01} # start values for optimization\n",
     "use_warmstart = False\n",
     "use_optimizer = True\n",
@@ -705,7 +705,7 @@
     "    theta = {\"beta\": res.x[0], \"gamma\": res.x[1]}    \n",
     "\n",
     "# run qaoa circuit with parameters in theta\n",
-    "counts, qc = quantum(hamiltonian, nfeatures, layers, theta[\"beta\"], theta[\"gamma\"], shots, warmstart_statevector)"
+    "counts, qc = quantum(hamiltonian, nfeatures, layers, theta[\"beta\"], theta[\"gamma\"], 100*shots, warmstart_statevector)"
    ]
   },
   {
@@ -745,21 +745,15 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.9 (XPython)",
    "language": "python",
-   "name": "python3"
+   "name": "xpython"
   },
   "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.9.15"
+   "version": "3.9.14"
   },
   "vscode": {
    "interpreter": {
