Change qaoa notebook to conform new code standard

--- a/configproblem/qaoa_mincost_sat.ipynb
+++ b/configproblem/qaoa_mincost_sat.ipynb
@@ -85,15 +85,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Imports\n",
-    "from qiskit import Aer, transpile, QuantumCircuit, ClassicalRegister, QuantumRegister\n",
-    "from qiskit.circuit import Parameter\n",
+    "# Notebook Setup\n",
+    "from IPython.core import page\n",
+    "page.page = print\n",
+    "\n",
+    "# Imports used for examples\n",
     "from qiskit.visualization import plot_histogram\n",
-    "import matplotlib.pyplot as plt\n",
-    "\n",
-    "from pprint import pprint\n",
-    "\n",
-    "import math"
+    "from pprint import pprint"
    ]
   },
   {
@@ -113,11 +111,9 @@
    "outputs": [],
    "source": [
     "# Uniform Superposition Initialization\n",
-    "def superposition_circuit(nqubits: int) -> QuantumCircuit:\n",
-    "    qc_0 = QuantumCircuit(nqubits)\n",
-    "    for i in range(0, nqubits):\n",
-    "        qc_0.h(i)\n",
-    "    return qc_0"
+    "from fragments.quantum_states import superposition_circuit, add_all_hadamards\n",
+    "%psource superposition_circuit\n",
+    "%psource add_all_hadamards"
    ]
   },
   {
@@ -147,12 +143,8 @@
    "outputs": [],
    "source": [
     "# Mixer Hamiltonian\n",
-    "def mixer_circuit(nqubits: int) -> QuantumCircuit:\n",
-    "    beta = Parameter(\"$\\\\beta$\")\n",
-    "    qc_mix = QuantumCircuit(nqubits)\n",
-    "    for i in range(0, nqubits):\n",
-    "        qc_mix.rx(2 * beta, i)\n",
-    "    return qc_mix, beta"
+    "from qaoa_mincost_sat import mixer_circuit\n",
+    "%psource mixer_circuit"
    ]
   },
   {
@@ -218,30 +210,8 @@
    "outputs": [],
    "source": [
     "# Cost Hamiltonian\n",
-    "def problem_circuit(hamiltonian, nqubits: int) -> QuantumCircuit:\n",
-    "    gamma = Parameter(\"$\\\\gamma$\")\n",
-    "    qc_p = QuantumCircuit(nqubits)\n",
-    "    normalization = math.pi/max(hamiltonian.values())\n",
-    "    \n",
-    "    for key, factor in hamiltonian.items():\n",
-    "        acting_qubits = len(key)\n",
-    "        \n",
-    "        if acting_qubits == 0:\n",
-    "            pass # identity case\n",
-    "        elif acting_qubits == 1:\n",
-    "            # single qubit term\n",
-    "            q1 = key[0]\n",
-    "            qc_p.rz(2 * normalization * factor * gamma, q1)\n",
-    "        elif acting_qubits ==2:\n",
-    "            # quadratic qubit term\n",
-    "            q1 = key[0]\n",
-    "            q2 = key[1]\n",
-    "            qc_p.rzz(2 * normalization * factor * gamma, q1, q2)\n",
-    "        else:\n",
-    "            # non quadratic, error\n",
-    "            RuntimeError(f\"Non quadratic term in hamiltonian: {key, factor}\")\n",
-    "            \n",
-    "    return qc_p, gamma"
+    "from qaoa_mincost_sat import problem_circuit\n",
+    "%psource problem_circuit"
    ]
   },
   {
@@ -274,30 +244,8 @@
    "outputs": [],
    "source": [
     "# QAOA Circuit\n",
-    "def qaoa_circuit(hamiltonian, nqubits, nlayers, amplitude_vector=None) -> QuantumCircuit:\n",
-    "    if amplitude_vector is not None:\n",
-    "        # warm start\n",
-    "        qc = QuantumCircuit(nqubits) \n",
-    "        qc.initialize(amplitude_vector)\n",
-    "    else:\n",
-    "        # equal superposition\n",
-    "        qc = superposition_circuit(nqubits)\n",
-    "        \n",
-    "    \n",
-    "    qg_mixer, beta = mixer_circuit(nqubits)\n",
-    "#     qg_mixer.name = \"Mixer\"\n",
-    "    qg_problem, gamma = problem_circuit(hamiltonian, nqubits)\n",
-    "#     qg_problem.name = \"Problem\"\n",
-    "    \n",
-    "    for l in range(nlayers):\n",
-    "        qc.barrier()\n",
-    "        qc = qc.compose(qg_problem)\n",
-    "        qc.barrier()\n",
-    "        qc = qc.compose(qg_mixer)\n",
-    "\n",
-    "        \n",
-    "    qc.measure_all()\n",
-    "    return qc, beta, gamma"
+    "from qaoa_mincost_sat import qaoa_circuit\n",
+    "%psource qaoa_circuit"
    ]
   },
   {
@@ -328,22 +276,8 @@
    "outputs": [],
    "source": [
     "# QAOA Quantum Procedure\n",
-    "def quantum(hamiltonian, nqubits, layers, beta_val, gamma_val, shots=512, amplitude_vector=None):\n",
-    "    qc, beta, gamma = qaoa_circuit(hamiltonian, nqubits, layers, amplitude_vector)\n",
-    "        \n",
-    "    # Set parameters for qc\n",
-    "    qc = qc.bind_parameters({\n",
-    "        beta: beta_val,\n",
-    "        gamma: gamma_val\n",
-    "    })\n",
-    "\n",
-    "    # run and measure qc\n",
-    "    qasm_sim = Aer.get_backend('qasm_simulator')\n",
-    "    transpiled_qaoa = transpile(qc, qasm_sim)\n",
-    "    results = qasm_sim.run(transpiled_qaoa, shots=shots).result()\n",
-    "    counts = results.get_counts()\n",
-    "\n",
-    "    return counts, qc"
+    "from qaoa_mincost_sat import quantum\n",
+    "%psource quantum"
    ]
   },
   {
@@ -483,13 +417,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from qubovert import spin_var\n",
-    "\n",
-    "def solve_bruteforce(model):\n",
-    "    model_solution = model.solve_bruteforce()\n",
-    "    print(\"Variable assignment:\", model_solution)\n",
-    "    print(\"Model value:\", model.value(model_solution))\n",
-    "    print(\"Constraints satisfied?\", model.is_solution_valid(model_solution)) # we don't have constraints in our model"
+    "from util.hamiltonian_math import solve_bruteforce\n",
+    "%psource solve_bruteforce"
    ]
   },
   {
@@ -499,6 +428,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from qubovert import spin_var\n",
     "# define spin variables \n",
     "z1, z2, z3, z4, z5, z6 = spin_var('z1'), spin_var('z2'), spin_var('z3'), spin_var('z4'), spin_var('z5'), spin_var('z6')\n",
     "\n",
@@ -566,49 +496,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def compute_hamiltonian_energy(hamiltonian, counts):\n",
-    "    def compute_config_energy(config: str):\n",
-    "        energy = 0\n",
-    "        \n",
-    "        for key, factor in hamiltonian.items():\n",
-    "            acting_qubits = len(key)\n",
-    "\n",
-    "            if acting_qubits == 0:\n",
-    "                # identity case\n",
-    "                energy += factor\n",
-    "            elif acting_qubits == 1:\n",
-    "                # single qubit term\n",
-    "                q1 = key[0]\n",
-    "                energy += factor * config[q1]\n",
-    "            elif acting_qubits ==2:\n",
-    "                # quadratic qubit term\n",
-    "                q1 = key[0]\n",
-    "                q2 = key[1]\n",
-    "                energy += factor * config[q1] * config[q2]\n",
-    "            else:\n",
-    "                # non quadratic, error\n",
-    "                RuntimeError(f\"Non quadratic term in hamiltonian: {key, factor}\")\n",
-    "\n",
-    "        return energy\n",
-    "    \n",
-    "    # # take the config that was measured most often\n",
-    "    # config_str = max(counts, key=counts.get) \n",
-    "    # # convert the 0/1 feature string to ising integers\n",
-    "    # config = [-1 if s == \"0\" else 1 for s in config_str]\n",
-    "    # return compute_config_energy(config)\n",
-    "\n",
-    "    average_energy = 0\n",
-    "    for config_str in counts.keys():\n",
-    "        config = [-1 if s == \"0\" else 1 for s in config_str]\n",
-    "        energy = compute_config_energy(config)*counts.get(config_str)\n",
-    "\n",
-    "        # print(config, counts.get(config_str), energy)\n",
-    "        average_energy += energy\n",
-    "\n",
-    "    average_energy /= counts.shots()\n",
-    "    # print(\"Average:\", average_energy)\n",
-    "    return average_energy\n",
-    "\n"
+    "from qaoa_mincost_sat import compute_hamiltonian_energy\n",
+    "%psource compute_hamiltonian_energy"
    ]
   },
   {
@@ -628,23 +517,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_expectation(hamiltonian, nqubits, nlayers, shots=128, amplitude_vector=None):\n",
-    "    backend = Aer.get_backend('qasm_simulator')\n",
-    "    backend.shots = shots\n",
-    "    \n",
-    "    def execute_circ(theta):\n",
-    "        qc, beta, gamma = qaoa_circuit(hamiltonian, nqubits, nlayers, amplitude_vector)\n",
-    "        \n",
-    "        # Set parameters for qc\n",
-    "        qc = qc.bind_parameters({\n",
-    "            beta: theta[0],\n",
-    "            gamma: theta[1]\n",
-    "        })\n",
-    "        \n",
-    "        counts = backend.run(qc, nshots=shots).result().get_counts()\n",
-    "        return compute_hamiltonian_energy(hamiltonian, counts)\n",
-    "    \n",
-    "    return execute_circ"
+    "from qaoa_mincost_sat import get_expectation\n",
+    "%psource get_expectation"
    ]
   },
   {
@@ -659,17 +533,26 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "8bdfc014-0011-43fe-ac3e-db3584e58281",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from qaoa_mincost_sat import apply_qaoa\n",
+    "%psource apply_qaoa"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "216096d9",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# QAOA Using Optimizer\n",
-    "from scipy.optimize import minimize, basinhopping\n",
-    "\n",
+    "# QAOA Example Application Using Optimizer\n",
     "hamiltonian = combined_hamiltonian # min-cost SAT\n",
     "# hamiltonian = sat_model.to_quso()   # just SAT\n",
     "\n",
-    "# warmstart array\n",
+    "# warmstart array for specific SAT instance of this notebook\n",
     "warmstart_statevector = \\\n",
     "      [0.        , 0.        , 0.        , 0.        , 0.        ,\n",
     "       0.232379  , 0.28809721, 0.20976177, 0.        , 0.25298221,\n",
@@ -686,7 +569,7 @@
     "       0.04472136, 0.        , 0.        , 0.        ]\n",
     "\n",
     "layers = 60 # more layers = higher approximation rate but more quantum errors when running on real qpu\n",
-    "nfeatures = 6\n",
+    "n_features = 6\n",
     "shots = 256\n",
     "theta = {\"beta\": 0.01, \"gamma\": -0.01} # start values for optimization\n",
     "use_warmstart = False\n",
@@ -695,17 +578,7 @@
     "if not use_warmstart:\n",
     "    warmstart_statevector = None\n",
     "\n",
-    "# define expectation function for optimizers\n",
-    "expectation = get_expectation(hamiltonian, nfeatures, layers, shots, warmstart_statevector)\n",
-    "\n",
-    "# optimize beta and gamma\n",
-    "if use_optimizer:\n",
-    "    res = minimize(expectation, [theta[\"beta\"], theta[\"gamma\"]], method='BFGS', tol=1e-12)\n",
-    "    print(res)\n",
-    "    theta = {\"beta\": res.x[0], \"gamma\": res.x[1]}    \n",
-    "\n",
-    "# run qaoa circuit with parameters in theta\n",
-    "counts, qc = quantum(hamiltonian, nfeatures, layers, theta[\"beta\"], theta[\"gamma\"], 100*shots, warmstart_statevector)"
+    "counts, qc = apply_qaoa(hamiltonian, layers, n_features, shots, theta, warmstart_statevector, use_optimizer)"
    ]
   },
   {
