--- a/configproblem/grover_sat.ipynb
+++ b/configproblem/grover_sat.ipynb
@@ -281,8 +281,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from grover_sat import initialize_s\n",
-    "%psource initialize_s"
+    "from fragments.quantum_states import add_all_hadamards\n",
+    "%psource add_all_hadamards"
    ]
   },
   {
@@ -505,7 +505,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "q",
    "language": "python",
    "name": "python3"
   },
@@ -519,11 +519,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.9.15"
   },
   "vscode": {
    "interpreter": {
-    "hash": "d3514f4bb63f5ef06960f249eaf871d4155ba26850e795a4551f45f075b9fcda"
+    "hash": "faad9e4f9b7fb42165439c94406641ba61da81ba54e9c6de9b6b2c791707c6b0"
    }
   }
  },
