Add energy strategies

--- a/configproblem/qaoa_mincost_sat.ipynb
+++ b/configproblem/qaoa_mincost_sat.ipynb
@@ -484,9 +484,27 @@
    "metadata": {},
    "source": [
     "## Classical Routine\n",
-    "On the classical side we now need functions to evaluate $C$, which correspond to computing the energy of the Hamiltonian for a specific measured output (a configuration in our case) by `compute_config_energy`.\n",
-    "\n",
-    "As the circuit is executed multiple times the function `compute_hamiltonian_energy` averages `compute_config_energy` over a histogramm."
+    "On the classical side we now need functions to evaluate $C$, which correspond to computing the energy of the Hamiltonian for a specific measured output (a configuration in our case) by `compute_config_energy`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c0dcb437-ba13-47b8-af52-b902b224f211",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from util.hamiltonian_math import compute_config_energy\n",
+    "%psource compute_config_energy"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d6a03244-4f83-48c7-b707-1095556e6647",
+   "metadata": {},
+   "source": [
+    "As the circuit is executed multiple times the function `compute_hamiltonian_energy` can be used with different strategies.\n",
+    "Currently we provide average, top and minimum strategies and the best one to use is TBD."
    ]
   },
   {
@@ -496,8 +514,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from qaoa_mincost_sat import compute_hamiltonian_energy\n",
-    "%psource compute_hamiltonian_energy"
+    "from util.hamiltonian_math import compute_hamiltonian_energy, hamiltonian_strategy_average, hamiltonian_strategy_top, hamiltonian_strategy_min\n",
+    "%psource compute_hamiltonian_energy\n",
+    "%psource hamiltonian_strategy_average\n",
+    "%psource hamiltonian_strategy_top\n",
+    "%psource hamiltonian_strategy_min"
    ]
   },
   {
